src/test/ui/issues/issue-45199.ast.stderr
error[E0384]: cannot assign twice to immutable variable `b`
  --> $DIR/issue-45199.rs:10:5
   |
LL |     b = Box::new(1);
   |     --------------- first assignment to `b`
LL |
LL |     b = Box::new(2);
   |     ^^^^^^^^^^^^^^^ cannot assign twice to immutable variable

error[E0384]: cannot assign twice to immutable variable `b`
  --> $DIR/issue-45199.rs:21:5
   |
LL |     let b = Box::new(1);
   |         - first assignment to `b`
...
LL |     b = Box::new(2);
   |     ^^^^^^^^^^^^^^^ cannot assign twice to immutable variable

error[E0384]: cannot assign twice to immutable variable `b`
  --> $DIR/issue-45199.rs:30:5
   |
LL | fn test_args(b: Box<i32>) {
   |              - first assignment to `b`
...
LL |     b = Box::new(2);
   |     ^^^^^^^^^^^^^^^ cannot assign twice to immutable variable

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0384`.
